syntax = "proto3";

option csharp_namespace = "ProtoClusterTutorial";

message ChangeVehiclePositionRequest {
  Position position = 1;
}

message ChangeVehiclePositionResponse {
}

message GetVehiclePositionsHistoryRequest {
}

message GetVehiclePositionsHistoryResponse {
  repeated Position positions = 1;
}

message Position {
  double longitude = 1;
  double latitude = 2;  
}